Wrapping up final styles and bugs

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -30,6 +30,18 @@ h1, h2, h3, h4, h5, h6, h7, h8, h9 {
     font-weight: 100;
 }
 
+.h1 {
+    font-weight: 500;
+    font-size: 2.5rem;
+    margin-bottom: 0.25rem;
+}
+.h2 {
+    font-family: $font_one;
+    font-weight: 500;
+    font-size: 1.5rem;
+    color: $yellow;
+}
+
 p {
     line-height: 150%;
 }
@@ -44,4 +56,8 @@ p {
     &--no-flex {
         display: block;
     }
+}
+
+.mt {
+    margin-top: 2rem;
 }
