--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -3,7 +3,7 @@
  */
 .s-header {
     height: $header_height;
-    z-index: 100;
+    z-index: 200;
     position: absolute;
     top: 0;
     width: 100%;
